2003-03-27  Steve Youngs  <youngs@xemacs.org>

	* Local.rules.template (XEMACS_21_5): Default to 'off' until Ben
	commits the workspace that enables the new features.

	* XEmacs.rules (bindist): Process the 'compile' target so
	'bindist' actually builds the packages if required.
	(install): Ditto.

2003-03-22  Steve Youngs  <youngs@xemacs.org>

	* XEmacs.rules (EARLY_GENERATED_LISP): Use '?=' so we can override
	it in a package Makefile.
	Only create 'custom-defines.el' if we create 'custom-load.el'.

2003-03-09  Ben Wing  <ben@xemacs.org>

	* Local.rules.inc: New file.  Used when it's necessary to get at
	some settings (in particular, usually BUILD_WITHOUT_MULE) before
	including XEmacs.rules.
	
	* Local.rules.template (XEMACS):
	* Local.rules.template (XEMACS_21_5): New.
	* Local.rules.template (BATCH):
	* Local.rules.template (MAKEINFO):
	* Local.rules.template (INSTALL_HTML): New.
	Add new XEMACS_21_5; if t, build custom-defines.el files and use
	the new interface for building auto-autoloads.el files.

	Add new INSTALL_HTML, for building the packages with HTML (not working
	yet).

	Add load-always-display-messages=t to $(BATCH) flags.
	
	* XEmacs.rules:
	* XEmacs.rules (XEMACS_PACKAGES_BASE):
	* XEmacs.rules (DEPENDS_FILE_NAME): Removed.
	* XEmacs.rules (all): Removed.
	* XEmacs.rules (bytecompile): Removed.
	* XEmacs.rules (AUTOLOAD_PATH):
	* XEmacs.rules (GENERATED): Removed.
	* XEmacs.rules (EARLY_GENERATED_ELCS): New.
	* XEmacs.rules (GENERATED_ELCS): New.
	* XEmacs.rules (SOURCE_FILES_TO_COPY):
	* XEmacs.rules (.SUFFIXES):
	* XEmacs.rules (STAGING):
	* XEmacs.rules (FORMAT_INFO_LEVEL_3_USING_XEMACS_NO_SAVE_ARGS): Removed.
	* XEmacs.rules (check-mule): New.
	* XEmacs.rules (EXPLICIT_DOCS): New.
	* XEmacs.rules (EXPLICIT_DOCS_AS_TEXI): New.
	* XEmacs.rules (TEXI_FILES): New.
	* XEmacs.rules (INFO_FILES): New.
	* XEmacs.rules (INFO_DEP): New.
	* XEmacs.rules (mostlyclean): New.
	* XEmacs.rules (clean): New.
	* XEmacs.rules (HTML_FILES): New.