@@ -220,16 +220,15 @@
 	      (expand-file-name (cdr (assoc package
 					    package-directory-map))
 				package-source-root))))
-    (cond ((equal package "gnus")
-	   (expand-file-name "gnus/lisp" (file-name-as-directory dir)))
-	  ((or (equal package "w3") 
-	       (equal package "bbdb") 
+    (cond ((or (equal package "bbdb") 
+	       (equal package "ess")
+	       (equal package "gnus")
 	       (equal package "jde")
-	       (equal package "tramp")
 	       (equal package "lookup")
 	       (equal package "mule-ucs")
-	       (equal package "ess")
-	       (equal package "x-symbol"))
+	       (equal package "tramp")
+	       (equal package "x-symbol")
+               (equal package "w3"))
 	   (expand-file-name "lisp" (file-name-as-directory dir)))
 	  ((equal package "mew")
 	   (expand-file-name "mew" (file-name-as-directory dir)))
