@@ -1,5 +1,8 @@
 2003-03-27  Steve Youngs  <youngs@xemacs.org>
 
+	* package-compile.el: Gnus' lisp files are now in lisp/, not
+	gnus/lisp/. 
+
 	* Local.rules.template (XEMACS_21_5): Default to 'off' until Ben
 	commits the workspace that enables the new features.
 
